--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,8 +1,4 @@
 # These are supported funding model platforms
 
-github: # Replace with up to 4 GitHub Sponsors-enabled usernames e.g., [user1, user2]
-patreon: # Replace with a single Patreon username
-open_collective: nativebase
-ko_fi: # Replace with a single Ko-fi username
-tidelift: # Replace with a single Tidelift platform-name/package-name e.g., npm/babel
-custom: # Replace with a single custom sponsorship URL
+github: [codler] # Replace with up to 4 GitHub Sponsors-enabled usernames e.g., [user1, user2]
+custom: # Replace with up to 4 custom sponsorship URLs e.g., ['link1', 'link2']
