--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "native-base",
+  "name": "@codler/native-base",
   "description": "Essential cross-platform UI components for React Native",
   "keywords": [
     "android",
@@ -17,7 +17,7 @@
     "lint": "eslint \"src/**/*.{js, json}\"",
     "transpile": "npm run compile && cp src/basic/Icon/NBIcons.json dist/src/basic/Icon",
     "prepublish": "npm run transpile",
-    "postinstall": "node addEjectScript.js && opencollective-postinstall",
+    "postinstall": "node addEjectScript.js",
     "flow": "flow"
   },
   "jest": {
@@ -26,8 +26,13 @@
       "node_modules/(?!react-native|@shoutem|react-clone-referenced-element|native-base-shoutem-theme)"
     ]
   },
-  "version": "2.13.12",
-  "license": "Apache-2.0",
+  "version": "2.14.0",
+  "funding": {
+    "type": "individual",
+    "url": "https://github.com/sponsors/codler"
+  },
+  "author": "Han Lin Yap (https://yap.nu)",
+  "license": "ISC",
   "private": false,
   "dependencies": {
     "blueimp-md5": "^2.5.0",
@@ -39,7 +44,6 @@
     "jest-react-native": "^18.0.0",
     "lodash": "^4.17.14",
     "native-base-shoutem-theme": "0.3.1",
-    "opencollective-postinstall": "^2.0.2",
     "print-message": "^2.1.0",
     "prop-types": "^15.5.10",
     "react-native-drawer": "2.5.1",
@@ -62,35 +66,23 @@
     "eslint-plugin-react-native": "^2.0.0",
     "eslint-watch": "^5.1.2",
     "flow-bin": "0.47.0",
-    "husky": "^3.0.9",
     "jest": "^24.8.0",
     "prettier": "^1.18.2",
     "pretty-quick": "^1.11.1",
     "react": "16.4.1",
-    "react-native": "^0.60.4",
+    "react-native": "^0.63.0",
     "react-test-renderer": "16.4.1"
   },
-  "gitHead": "5bbeacc403ba97622703699132c55d8359344004",
-  "homepage": "https://github.com/GeekyAnts/NativeBase#readme",
   "main": "dist/src/index.js",
   "typings": "./index.d.ts",
   "optionalDependencies": {},
   "peerDependencies": {
     "react": ">=16.4.1",
-    "react-native": ">=0.56.0"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "npm run lint && pretty-quick --staged --pattern \"src/**/*.{js, json}\""
-    }
+    "react-native": ">=0.63.0"
   },
   "readmeFilename": "README.md",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/GeekyAnts/NativeBase.git"
-  },
-  "collective": {
-    "type": "opencollective",
-    "url": "https://opencollective.com/NativeBase"
+    "url": "git+https://github.com/codler/NativeBase.git"
   }
 }
