--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
   "license": "ISC",
   "private": false,
   "dependencies": {
-    "@codler/react-native-keyboard-aware-scroll-view": "1.0.0",
+    "@codler/react-native-keyboard-aware-scroll-view": "^1.0.1",
     "blueimp-md5": "^2.5.0",
     "clamp": "^1.0.1",
     "color": "~3.1.2",
